<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFilterOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvClose"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/light_primary"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_close" />

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFilterOptions"
                    style="@style/Filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_options"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDone"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/light_secondary"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Filters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/filter_done"
                        android:textColor="@color/white" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/filter_title_brand" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_spinner_shape"
                android:paddingVertical="5dp"
                android:spinnerMode="dropdown"
                android:textSize="20sp"
                android:theme="@style/Filters" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_title_price"
                android:textSize="@dimen/FilterTitleTextSize" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_spinner_shape"
                android:paddingVertical="5dp"
                android:spinnerMode="dropdown"
                android:theme="@style/Filters" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_title_size"
                android:textSize="@dimen/FilterTitleTextSize" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_spinner_shape"
                android:paddingVertical="5dp"
                android:spinnerMode="dropdown"
                android:theme="@style/Filters" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>